@@ -228,7 +228,7 @@ grub_uhci_pci_iter (grub_pci_device_t dev,
   /* Link all Transfer Descriptors in a list of available Transfer
      Descriptors.  */
   for (i = 0; i < 256; i++)
-    u->td[i].linkptr = (grub_uint32_t) &u->td[i + 1];
+    u->td[i].linkptr = (grub_uint32_t) (grub_addr_t) &u->td[i + 1];
   u->td[255 - 1].linkptr = 0;
   u->tdfree = u->td;
 
@@ -238,20 +238,20 @@ grub_uhci_pci_iter (grub_pci_device_t dev,
   /* Setup the frame list pointers.  Since no isochronous transfers
      are and will be supported, they all point to the (same!) queue
      head.  */
-  fp = (grub_uint32_t) u->qh & (~15);
+  fp = (grub_uint32_t) (grub_addr_t) u->qh & (~15);
   /* Mark this as a queue head.  */
   fp |= 2;
   for (i = 0; i < 1024; i++)
     u->framelist[i] = fp;
   /* Program the framelist address into the UHCI controller.  */
   grub_uhci_writereg32 (u, GRUB_UHCI_REG_FLBASEADD,
-			(grub_uint32_t) u->framelist);
+			(grub_uint32_t) (grub_addr_t) u->framelist);
 
   /* Make the Queue Heads point to each other.  */
   for (i = 0; i < 256; i++)
     {
       /* Point to the next QH.  */
-      u->qh[i].linkptr = (grub_uint32_t) (&u->qh[i + 1]) & (~15);
+      u->qh[i].linkptr = (grub_uint32_t) (grub_addr_t) (&u->qh[i + 1]) & (~15);
 
       /* This is a QH.  */
       u->qh[i].linkptr |= GRUB_UHCI_LINK_QUEUE_HEAD;
@@ -319,7 +319,7 @@ grub_alloc_td (struct grub_uhci *u)
     return NULL;
 
   ret = u->tdfree;
-  u->tdfree = (grub_uhci_td_t) u->tdfree->linkptr;
+  u->tdfree = (grub_uhci_td_t) (grub_addr_t) u->tdfree->linkptr;
 
   return ret;
 }
@@ -327,7 +327,7 @@ grub_alloc_td (struct grub_uhci *u)
 static void
 grub_free_td (struct grub_uhci *u, grub_uhci_td_t td)
 {
-  td->linkptr = (grub_uint32_t) u->tdfree;
+  td->linkptr = (grub_uint32_t) (grub_addr_t) u->tdfree;
   u->tdfree = td;
 }
 
@@ -352,7 +352,7 @@ grub_free_queue (struct grub_uhci *u, grub_uhci_td_t td,
       
       /* Unlink the queue.  */
       tdprev = td;
-      td = (grub_uhci_td_t) td->linkptr2;
+      td = (grub_uhci_td_t) (grub_addr_t) td->linkptr2;
 
       /* Free the TD.  */
       grub_free_td (u, tdprev);
@@ -413,8 +413,8 @@ grub_uhci_transaction (struct grub_uhci *u, unsigned int endp,
     }
 
   grub_dprintf ("uhci",
-		"transaction: endp=%d, type=%d, addr=%d, toggle=%d, size=%d data=0x%x td=%p\n",
-		endp, type, addr, toggle, size, data, td);
+		"transaction: endp=%d, type=%d, addr=%d, toggle=%d, size=%lu data=0x%x td=%p\n",
+		endp, type, addr, toggle, (unsigned long) size, data, td);
 
   /* Don't point to any TD, just terminate.  */
   td->linkptr = 1;
@@ -484,8 +484,8 @@ grub_uhci_transfer (grub_usb_controller_t dev,
 	td_first = td;
       else
 	{
-	  td_prev->linkptr2 = (grub_uint32_t) td;
-	  td_prev->linkptr = (grub_uint32_t) td;
+	  td_prev->linkptr2 = (grub_uint32_t) (grub_addr_t) td;
+	  td_prev->linkptr = (grub_uint32_t) (grub_addr_t) td;
 	  td_prev->linkptr |= 4;
 	}
       td_prev = td;
@@ -497,7 +497,7 @@ grub_uhci_transfer (grub_usb_controller_t dev,
 
   /* Link it into the queue and terminate.  Now the transaction can
      take place.  */
-  qh->elinkptr = (grub_uint32_t) td_first;
+  qh->elinkptr = (grub_uint32_t) (grub_addr_t) td_first;
 
   grub_dprintf ("uhci", "initiate transaction\n");
 
@@ -508,7 +508,7 @@ grub_uhci_transfer (grub_usb_controller_t dev,
     {
       grub_uhci_td_t errtd;
 
-      errtd = (grub_uhci_td_t) (qh->elinkptr & ~0x0f);
+      errtd = (grub_uhci_td_t) (grub_addr_t) (qh->elinkptr & ~0x0f);
 
       grub_dprintf ("uhci", ">t status=0x%02x data=0x%02x td=%p\n",
 		    errtd->ctrl_status, errtd->buffer & (~15), errtd);
